# SFM

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  main.cpp
include/: gui.h  images.h
src/: CMakeLists.txt  gui.cpp  images.cpp
tests/: CMakeLists.txt  images_loader.cpp
